<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VW CPP</string>        
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="ingresar">Iniciar Sesión</string>
    <string-array name="Opciones_Tabla_Precios">
        <item>Seleccione una opción</item>
        <item>Definitivamente SI lo usaría.</item>
        <item>Probablemente SI lo usaría </item>
        <item>NO sé si lo usaría </item>
        <item>Probablemente NO lo usaría </item>
        <item>Definitivamente NO lo usaría</item>
    </string-array>
    <string name="nf">¿No encontraste tu farmacia?</string>
    <string name="iniciar">Iniciar Encuesta</string>
    <string name="sincronizar">Iniciar Sincronización</string>
</resources>